<resources>
    <string name="app_name">M6_Individual2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvPrecio">Precio</string>
    <string name="tvCantidad">Cantidad</string>
    <string name="tvNombre">Nombre artículo</string>
    <string name="etPrecioHint">Precio por unidad</string>
    <string name="etCantidadHint">Cantidad del Artículo</string>
    <string name="btAgregar">Agregar Artículo</string>
    <string name="etNombre">Nombre del artículo</string>
    <string name="tvTotal">"Total: "</string>
</resources>